# hyperfixi

./: .eslintrc.json  .gitignore  .mcp.json  .oxlintrc.json  .prettierignore  .prettierrc  ACTUAL_TEST_FAILURE_ANALYSIS.md  ANALYSIS_QUICK_FIX.md  ANALYSIS_TOOLS_README.md  ARCHITECTURE_NOTE_LEGACY_ENHANCED.md  ASSESSMENT_INDEX.md  ASYNC_TRIGGER_FIX.md  BROWSER_INTEGRATION_COMPLETE.md  BROWSER_INTEGRATION_FIX_STATUS.md  BUNDLE_AUDIT.md  CHANGELOG.md  CLAUDE.md  COMMAND_MIGRATION_GUIDE.md  COMPLETE_COMPATIBILITY_REPORT.md  COMPREHENSIVE_PATTERN_ANALYSIS.md  CONDITIONAL_TYPES_SUMMARY.md  CONSOLIDATION_COMPLETE.md  CONTINUE_INVESTIGATION_RESULTS.md  CONTRIBUTING.md  COOKBOOK_ANALYSIS_SUMMARY.md  COOKBOOK_COMPARISON_ANALYSIS.md  COOKBOOK_IMPLEMENTATION_COMPLETE.md  COOKBOOK_IMPLEMENTATION_STATUS.md  COOKBOOK_IMPLEMENTATION_SUMMARY.md  DISCOVERED_COMMANDS_ANALYSIS.md  DOUBLE_INIT_FIX.md  ENHANCED_COMPATIBILITY_COMPLETE.md  EVALUATE_IMPLEMENTATION.md  EVENT_REUSE_BUG_FIX.md  EXPRESSION_EVALUATION_ISSUES.md  FINAL_COOKBOOK_IMPLEMENTATION.md  FIX_VALIDATION_SYSTEM_PROMPT.md  GALLERY_FIX_PLAN.md  GALLERY_TEST_SUITE.md  GIT_HOOKS.md  (+124 more)
protocol/python/: README.md  pyproject.toml
protocol/python/src/lokascript_explicit/: __init__.py  __main__.py  json_convert.py  parser.py  references.py  renderer.py  (+1 more)
protocol/python/tests/: test_conformance.py  test_json.py  test_parser.py  test_renderer.py
protocol/rust/: Cargo.toml
protocol/rust/examples/: cli.rs
protocol/rust/src/: json_convert.rs  lib.rs  parser.rs  references.rs  renderer.rs  types.rs
protocol/rust/tests/: conformance.rs
(+682 files in other folders)
