[package]
name = "lokascript-explicit"
version = "0.1.0"
edition = "2021"
description = "LokaScript Explicit Syntax (LSE) protocol — parser, renderer, and JSON conversion"
license = "MIT"
repository = "https://github.com/lokascript/explicit-syntax-rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[[example]]
name = "cli"
path = "examples/cli.rs"
